--- a/dotnet/src/Microsoft.Agents.AI.Bots/Microsoft.Agents.AI.Bots.csproj
+++ b/dotnet/src/Microsoft.Agents.AI.Bots/Microsoft.Agents.AI.Bots.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Agents.AI.Abstractions\Microsoft.Agents.AI.Abstractions.csproj" />
     <ProjectReference Include="..\Microsoft.Agents.AI.OpenAI\Microsoft.Agents.AI.OpenAI.csproj" />
+    <ProjectReference Include="..\Microsoft.Agents.AI.Workflows\Microsoft.Agents.AI.Workflows.csproj" />
   </ItemGroup>
 
   <ItemGroup>
